--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <title>APIs</title>
 </head>
 <body>
-    <p class="name"></p>
-    <p class="blog"></p>
-
-  <script src="../assets/js/app.js"></script>
+  <div class="wrapper">
+    <h1>GitHub User Info</h1>
+    <p class="name">Nombre del usuario</p>
+    <p class="blog">Blog</p>
+    <p class="location">Ubicación</p>
+  </div>
+  <script src="assets/js/app.js"></script>
 </body>
 </html>
