Se agregaron los comentarios a las modificaciones del codigo y del html

--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <title>APIs</title>
 </head>
 <body>
+  <!-- Se metio todo dentro de un div -->
   <div class="wrapper">
     <h1>GitHub User Info</h1>
     <p class="name">Nombre del usuario</p>
     <p class="blog">Blog</p>
+    <!-- Se agrego p class location -->
     <p class="location">Ubicación</p>
   </div>
+  <!-- El script se dejo fuera del DIV -->
   <script src="assets/js/app.js"></script>
 </body>
 </html>
